--- a/style_files/index_style.css
+++ b/style_files/index_style.css
@@ -3,24 +3,14 @@ body {
     padding: 0;
 }
 
-.section {
+.video-container {
+    position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
 }
 
-.bg-block-1 {
-    background-color: #eff0f3;
-    height: 850px;
-}
 
-.bg-block-2 {
-    background-color: #fd7f42;
-    height: 150px;
-}
-
-.bg-block-3 {
-    background-color: #eff0f3;
-    height: 850px;
-}
 
 
 
@@ -29,8 +19,7 @@ body {
 
 
 /* Website Colour Palette:
-Light Blue: #eff0f3
-pastel orange: #fd7f42
+
 */
 
 /* Logo Colour Palette:
