--- a/style_files/index_style.css
+++ b/style_files/index_style.css
@@ -1,88 +1,92 @@
 /* DEFINED CONSTANTS */
 :root {
-    --dark_colour: #192229;
-    --white: #fff;
-    --main_font: "Poltawski Nowy", serif;
+  --dark_colour: #192229;
+  --white: #fff;
+  --main_font: "Poltawski Nowy", serif;
+  --support_font: "Montserrat", sans-serif;
 }
 
 
 /* BODY STYLE */
 
 body {
-    margin: 0;
-    padding: 0;
-    height: 100vh;
-    align-items: center;
-    justify-content: center;
-    background-image: url(../assets/landing_page_bg.jpg);
-    background-size: cover;
-    background-position: center;
-    color: var(--white);
-    font-family: 'Arial', sans-serif;
-  }
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  align-items: center;
+  justify-content: center;
+  background-image: url(../assets/landing_page_bg.jpg);
+  background-size: cover;
+  background-position: center;
+  color: var(--white);
+  font-family: var(--main_font);
+}
 
 
 
 /* NAVIGATION BAR STYLE */
 header {
-    background-color: #333; /* Set your desired background color */
-    color: #fff; /* Set your desired text color */
-    padding: 10px;
-  }
+  background: linear-gradient(to top, rgba(51, 51, 51, 0), var(--dark_colour));
+  color: var(--white);
+  padding: 30px;
+}
   
-  .navbar-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  
-  .navbar-company-name {
-    display: flex;
-    align-items: center;
-    text-decoration: none;
-    color: #fff; /* Set your desired text color */
-  }
-  
-  .navbar-company-name img {
-    max-width: 40px; /* Set the max width of your logo image */
-    margin-right: 10px; /* Adjust as needed */
-  }
-  
-  .nav-links {
-    display: flex;
-  }
-  
-  .nav-links a {
-    text-decoration: none;
-    color: #fff; /* Set your desired text color */
-    margin-left: 20px; /* Adjust as needed */
-  }
+.navbar-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.navbar-company-name {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  color: var(--white);
+  font-size: 20px;
+  margin-left: 20px;
+}
+
+.navbar-company-name img {
+  max-width: 40px;
+  margin-left: 20px;
+}
+
+.navbar-links {
+  display: flex;
+  font-family: var(--support_font);
+}
+
+.navbar-links a {
+  text-decoration: none;
+  color: var(--white);
+  margin-right: 20px;
+}
 
 
 
 /* LANDING PAGE STYLE */
 
 .landing-page-container {
-    text-align: center;
-  }
-  
-  .company-name {
-    font-size: 10vh;
-    font-weight: 400;
-    margin-bottom: 10px;
-    font-family: var(--main_font);
-    font-optical-sizing: auto;
-    font-style: normal;
-    letter-spacing: 7px;
-  }
-  
-  .tagline {
-    font-size: 25px;
-    font-family: "Montserrat", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 400;
-    font-style: normal;
-  }
+  text-align: center;
+  margin-top: 200px;
+}
+
+.company-name {
+  font-size: 10vh;
+  font-weight: 400;
+  margin-bottom: 10px;
+  font-optical-sizing: auto;
+  font-style: normal;
+  letter-spacing: 7px;
+}
+
+.tagline {
+  font-size: 25px;
+  font-family: var(--support_font);
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
 
 
 
