--- a/style_files/index_style.css
+++ b/style_files/index_style.css
@@ -8,10 +8,59 @@
 }
 
 
+/* BODY STYLE */
+body, html {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  font-family: var(--main_font);
+}
 
 
+/* LANDING PAGE STYLE */
+.landing-page-container {
+  position: relative;
+  height: 100vh;
+  overflow: hidden;
+}
 
+#landing-page-vid {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: -1;
+}
 
+.video-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  cursor: url(/assets/play_button_cursor.svg) 60 60, auto;
+}
+
+.landing-page-header {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  text-align: center;
+  transform: translate(-50%, -50%);
+  color: var(--white);
+}
+
+#landing-page-title {
+  font-size: 3rem;
+  margin-bottom: 0px;
+  letter-spacing: 10px;
+}
+
+#tagline {
+  margin-top: 0px;
+  font-family: var(--support_font);
+}
 
 
 /* Website Colour Palette:
