--- a/style_files/index_style.css
+++ b/style_files/index_style.css
@@ -29,7 +29,11 @@ body, html {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  width: 100%;
+  height: auto;
   z-index: -1;
+  object-fit: cover;
+  background-attachment: fixed;
 }
 
 .video-overlay {
@@ -39,7 +43,7 @@ body, html {
   width: 100%;
   height: 100%;
   z-index: 1;
-  cursor: url(/assets/play_button_cursor.svg) 60 60, auto;
+  cursor: url(/assets/play_button_cursor.svg) 20 20, auto;
 }
 
 .landing-page-header {
@@ -61,6 +65,53 @@ body, html {
   margin-top: 0px;
   font-family: var(--support_font);
 }
+
+
+/* SHORT BIO STYLE */
+.short-bio-container {
+  position: relative;
+  height: 450px;
+  background-color: var(--dark_colour);
+  display: flex;
+  align-items: center;
+  padding-left: 400px;
+  color: var(--white);
+  z-index: 2;
+}
+
+.short-bio-content {
+  max-width: 700px;
+}
+
+#short-bio-title {
+  font-size: 2rem;
+  letter-spacing: 2px;
+  font-family: var(--support_font);
+}
+
+#short-bio-paragraph {
+  font-size: 1.1rem;
+  margin-bottom: 30px;
+  font-style: italic;
+}
+
+.read-more-link {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: var(--pastal_orange);
+  color: var(--white);
+  text-decoration: none;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+
+.read-more-link:hover {
+  background-color: var(--white);
+  color: var(--dark_colour);
+}
+
+
+
 
 
 /* Website Colour Palette:
