attemp at adding responsiveness

--- a/style_files/index_style.css
+++ b/style_files/index_style.css
@@ -112,6 +112,20 @@ body, html {
 
 
 
+/* MEDUA QUERIES FOR SCREEN SIZING */
+@media screen and (max-width: 768px) {
+  .landing-page-header {
+    padding: 0 20xp;
+  }
+
+  .short-bio-container {
+    padding: 0 20px;
+  }
+}
+
+
+
+
 
 
 /* Website Colour Palette:
